--- a/PracticaDaD/src/main/resources/templates/addCard_template.html
+++ b/PracticaDaD/src/main/resources/templates/addCard_template.html
@@ -37,6 +37,7 @@
 	             	
 	             <div class="col-4 offset-4" style="padding-top: 15px">
 	             	<input type="submit" value='A&ntilde;adir' class="btn btn-primary btn-user btn-block"/>
+	             	<input type="hidden" name="_csrf" value="{{token}}"/>
 	             </div>
 	            </div>	
 	            </form>
