--- a/PracticaDaD/src/main/resources/templates/addTicket_template.html
+++ b/PracticaDaD/src/main/resources/templates/addTicket_template.html
@@ -51,6 +51,7 @@
 							<div class="col-4 offset-4" style="padding-top: 15px">
 								<input type="submit" value='Añadir Ticket'
 									class="btn btn-primary btn-user btn-block" />
+								<input type="hidden" name="_csrf" value="{{token}}"/>
 							</div>
 						</div>
 					</form>
