--- a/PracticaDaD/src/main/resources/templates/buy_template.html
+++ b/PracticaDaD/src/main/resources/templates/buy_template.html
@@ -123,6 +123,7 @@
 						<div class="row">
 							<div class="col-4 offset-4" style="padding-top: 15px">
 								<input type="submit" value='Adquirir' class="btn btn-primary btn-user btn-block" />
+								<input type="hidden" name="_csrf" value="{{token}}"/>
 							</div>
 						</div>
 					</form>
