--- a/PracticaDaD/src/main/resources/templates/register_template.html
+++ b/PracticaDaD/src/main/resources/templates/register_template.html
@@ -36,17 +36,18 @@
               </div>
               <form class="user" method="post" action="/register">
                 <div class="form-group">
-                  <input type="text" class="form-control form-control-user" id="exampleInputEmail" placeholder="Nombre de usuario">
+                  <input name="username" type="text" class="form-control form-control-user" placeholder="Usuario">
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="password" class="form-control form-control-user" placeholder="Contraseña">
+                    <input name="password1" type="password" class="form-control form-control-user" placeholder="Contraseña">
                   </div>
                   <div class="col-sm-6">
-                    <input type="password" class="form-control form-control-user" placeholder="Repitir Contraseña">
+                    <input name="password2" type="password" class="form-control form-control-user" placeholder="Repitir Contraseña">
                   </div>
                 </div>
                 <input type='submit' value='Registrarse' class="btn btn-primary btn-user btn-block">
+                <input type="hidden" name="_csrf" value="{{token}}"/>
                 <hr>
                 <div class="text-center">
                 	<h1>Tic <sup>Tak</sup> Ticket</h1>
