--- a/PracticaDaD/src/main/resources/templates/user_template.html
+++ b/PracticaDaD/src/main/resources/templates/user_template.html
@@ -25,6 +25,7 @@
 							<form method='post' action='/deleteCard'>
 							<input type="hidden" name="cardNumber" value={{cardNumber}} />
 							<input type="submit" value='Eliminar' class="btn btn-danger btn-user btn-block" />
+							<input type="hidden" name="_csrf" value="{{token}}"/>
 							</form>
 						</div>
 					</div>
